<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">休闲连连看</string>
    <string name="back_again">再按一次退出程序</string>
    <string name="music">音乐</string>
    <string name="sound">音效</string>
    <string name="help">帮助</string>
    <string name="help_info">将2个相同的图片连接起来,连线不多于3根,就可以成功将图片消除。\n微博或QQ登录后可以参与网络排行,还能将成就分享到QQ,微博和微信等平台。</string>
    <string name="about">关于</string>
    <string name="about_info">应用名称：休闲连连看 \n版本编号：1.4.4\n应用作者：白杨，神保\n官方微信：xx-llk\n官网：http://xxllk.aliapp.com</string>
    <string name="submit">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="next">继续</string>
    <string name="again">再来</string>
    <string name="game_success">恭喜你，游戏已通关！</string>
    <string name="game_level_record">记录:</string>
    <string name="game_level_norecord">记录:无</string>
    <string name="game_level_task">任务:</string>
    <string name="game_score">游戏得分:</string>
    <string name="game_level_lost">闯关失败！</string>
    <string name="game_level_success">闯关成功！</string>
    <string name="game_time_success">游戏胜利！</string>
    <string name="game_time">游戏时间:</string>
    <string name="game_time_min">最快记录:</string>
    <string name="game_task_success">任务完成！</string>
    <string name="game_task_fail">任务失败！</string>
    <string name="game_task_taskscore">游戏任务:</string>
    <string name="game_ready_go">GO!</string>
    <string name="game_prompt_none">已经不能消除了，请重排或按返回退出!</string>
    <string name="login_with_sina_weibo">新浪微博登录</string>
    <string name="login_with_qzone">QQ空间登录</string>
    <string name="network_exception">登录失败，请检查网络设置。</string>
    <string name="logining">登录成功,欢迎回来!</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出</string>
    <string name="user_hello">, 你好!</string>
    <string name="share_comment">继续加油!</string>
    <string name="share_score" formatted="false">我在关卡[%s]中闯关成功得到[%s]分,一起来玩吧o(∩_∩)o!</string>
    <string name="share_task" formatted="false">我在关卡[%s]中完成任务得到[%s]分,一起来玩吧o(∩_∩)o!</string>
    <string name="share_time" formatted="false">我在关卡[%s]中完成任务只用[%s]秒,一起来玩吧o(∩_∩)o!</string>
    <string name="notice">微博或QQ登录可参与网络排名@可以分享成就到QQ,微博和微信@消耗钻石可以强制解锁关卡@可以发送短信邀请好友一起闯关</string>
    <string name="game_star">游戏评级:</string>
    <string name="game_get">游戏奖励:</string>
    <string name="game_fail">一时失手,再来一盘.</string>
    <string name="score_unit">分</string>
    <string name="time_unit">秒</string>
    <string name="login_award">获得每日登录奖励10钻石100金币</string>
    <string name="unlock_title">强制解锁</string>
    <string name="unlock_msg">\n您确认消耗[5]钻石强制解锁关卡[%s]吗?</string>
    <string name="unlock_success_msg">关卡解锁成功!</string>
    <string name="share">分享</string>
    <string name="share_success">分享成功,奖励%s钻石!</string>
    <string name="top_net_error">获取数据失败,请检查网络设置!</string>
    <string name="top_data_error">获取或解析数据失败!</string>
    <string name="level_title">关卡:[%s]</string>
    <string name="select_mode">请选择游戏模式:</string>
    <string name="select_rank">请选择游戏级别:</string>
    <string name="select_level">请选择游戏关卡:</string>
    <string name="top_search">排名</string>
    <string name="total_rank">总排名:</string>
    <string name="total_rank_0">无</string>
    <string name="friend">好友</string>
    <string name="info_sina_weibo">微博登录</string>
    <string name="info_qzone">QQ登录</string>
    <string name="info_known">我知道了</string>
    <string name="info_prompt">温馨提示</string>
    <string name="info_message">***可以微博或QQ登录啦！***\n\n1.每日登录获得钻石和金币奖励.\n2.登录后可以强制解锁关卡.\n3.登录后可以参与网络排名.\n4.新浪和腾讯开放接入安全无忧.</string>
    <string name="tool_no_refresh">已经没有重排道具了，可以去玩玩闯关模式!</string>
    <string name="tool_no_prompt">已经没有提示道具了，可以去玩玩闯关模式!</string>
    <string name="tool_no_addtime">已经没有加分道具了，可以去玩玩闯关模式!</string>
    <string name="link_text"><a href="http://app.mi.com/detail/61473">支持作者，给个好评，谢谢！</a></string>
    <string name="share_top_info">期待高手来挑战。。。</string>
    <string name="top1_levels">排名第一关卡数:</string>
    <string name="like_info">你对[%s]点赞成功</string>
    <string name="unlike_info">你对[%s]取消赞成功</string>
    <string name="like_error">点赞失败，请检查网络设置。</string>
    <string name="share_nologin_success">分享成功,登录分享奖励%s钻石!</string>
    <string name="xxlogin_prompt">\n**开启星星模式需要用户登录,请登录后再来挑战。</string>
    <string name="share_prompt">**点击分享按钮可以将排行榜分享到新浪微博、QQ空间或微信朋友圈。\n**关卡排名中左右滑动可以查看上一关/下一关排名.\n</string>

</resources>