<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".WelcomeActivity" >

    <com.znv.linkup.view.LevelTop
        android:id="@+id/welcome_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal" >
    </com.znv.linkup.view.LevelTop>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:src="@drawable/logo"
        tools:ignore="contentDescription" />

    <com.znv.linkup.view.GameTitle
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/mode0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/level_selector"
            android:tag="0"
            tools:ignore="contentDescription" />

        <ImageButton
            android:id="@+id/mode1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/time_selector"
            android:tag="1"
            tools:ignore="contentDescription" />

        <ImageButton
            android:id="@+id/mode2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/task_selector"
            android:tag="2"
            tools:ignore="contentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/music" />

        <TextView
            android:id="@+id/sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sound" />

        <TextView
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/more"
            android:gravity="center"
            android:text="@string/help" />

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/about"
            android:gravity="center"
            android:text="@string/about" />
    </LinearLayout>

    <TextView
        android:id="@+id/tsNotice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center" />

</LinearLayout>