<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/success"
        android:gravity="center"
        android:paddingLeft="30dip"
        android:paddingRight="30dip"
        android:paddingTop="10dip"
        android:text="@string/game_task_success"
        android:textColor="#FF3333FF"
        android:textSize="32sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lb_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:text="@string/game_task_score"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/success_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:layout_margin="5dp"
                android:layout_toRightOf="@id/lb_score"
                android:textColor="#FFFF3333"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/lb_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/success_score"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:text="@string/game_task_taskscore"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/task_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/success_score"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:layout_toRightOf="@id/lb_task"
                android:gravity="center"
                android:textColor="#FFFF3333"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/task_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/ok"
                tools:ignore="contentDescription" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:text="@string/game_get"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/level_diamond_reward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:drawableLeft="@drawable/diamond_reward"
                android:drawablePadding="2dp"
                android:gravity="center"
                android:textColor="#FFFF3333"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/level_coin_reward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:drawableLeft="@drawable/coins_reward"
                android:drawablePadding="2dp"
                android:gravity="center"
                android:textColor="#FFFF3333"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <com.znv.linkup.view.LevelTop
        android:id="@+id/task_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal" >
    </com.znv.linkup.view.LevelTop>

    <LinearLayout
        android:id="@+id/success_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:drawableTop="@drawable/back"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="#ffa500" />

        <TextView
            android:id="@+id/btnshare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:drawableTop="@drawable/share"
            android:gravity="center"
            android:text="@string/share"
            android:textColor="#ffa500" />

        <TextView
            android:id="@+id/btnAgainOrNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:drawableTop="@drawable/next"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="#ffa500" />
    </LinearLayout>

</LinearLayout>