<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/toplist"
    android:orientation="vertical"
    tools:context=".TopActivity" >

    <LinearLayout
        android:id="@+id/topUsers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="140dp"
        android:background="#8800ff00"
        android:gravity="center"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchMini"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topUsers"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvCurLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="#FFFFFF33"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#88888888"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/spModes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/modes"
                android:prompt="@string/select_mode" />

            <Spinner
                android:id="@+id/spRanks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/mode0ranks"
                android:prompt="@string/select_rank" />

            <Spinner
                android:id="@+id/spLevels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/levels"
                android:prompt="@string/select_level" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:onClick="preLevel"
        android:src="@drawable/top_back"
        tools:ignore="contentDescription" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:onClick="nextLevel"
        android:src="@drawable/top_next"
        tools:ignore="contentDescription" />

</RelativeLayout>